--- a/samples/org.kevoree.modeling.sample.kevoree.js.plain/sample.html
+++ b/samples/org.kevoree.modeling.sample.kevoree.js.plain/sample.html
@@ -9,12 +9,15 @@
 </div>
 
 <script type="text/javascript" src="src/js/jquery-1.9.1.min.js"></script>
-<script src="target/js/kotlin-lib-ecma5.js"></script>
+<script src="target/js/kotlin-lib-ecma3.js"></script>
+<script src="target/js/kotlin-lib.js"></script>
+<script src="target/js/kotlin-maps.js"></script>
 <script type="text/javascript" src="target/js/org.kevoree.modeling.sample.kevoree.js.js"></script>
-<!--
+
 <script  type="text/javascript">
+console.log(Kotlin.modules['org.kevoree.modeling.sample.kevoree.js']);
  $(document).ready(Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kmfjs.myApp)
 </script>
- -->
+
 </body>
 </html>
