improve JS compilation

--- a/samples/org.kevoree.modeling.sample.kevoree.js/sample.html
+++ b/samples/org.kevoree.modeling.sample.kevoree.js/sample.html
@@ -16,7 +16,12 @@
 
 <script  type="text/javascript">
 console.log(Kotlin.modules['org.kevoree.modeling.sample.kevoree.js']);
- $(document).ready(Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kmfjs.myApp)
+ $(document).ready(
+         Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kmfjs.myApp
+ )
+
+
+
 </script>
 
 </body>
