--- a/samples/org.kevoree.modeling.sample.kevoree.js/sample.html
+++ b/samples/org.kevoree.modeling.sample.kevoree.js/sample.html
@@ -37,6 +37,20 @@
 
 console.log(Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kevoree);
 Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kevoree.myApp()
+
+
+var txt = '';
+var xmlhttp = new XMLHttpRequest();
+xmlhttp.onreadystatechange = function(){
+    if(xmlhttp.status==200 && xmlhttp.readyState==4){
+        txt=xmlhttp.responseText;
+    }
+}
+xmlhttp.open("GET","kevoreemodelAll.json",true);
+xmlhttp.send();
+
+
+
 </script>
 
 </body>
