cleanup JS compat

--- a/samples/org.kevoree.modeling.sample.kevoree.js/sample.html
+++ b/samples/org.kevoree.modeling.sample.kevoree.js/sample.html
@@ -36,8 +36,10 @@
 <script  type="text/javascript">
 
 console.log(Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kevoree);
-Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kevoree.myApp()
+var root = Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'].kevoree.myApp()
 
+console.log(root);
+console.log(root.findNodesByID("node0").getName());
 
 var txt = '';
 var xmlhttp = new XMLHttpRequest();
