--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
@@ -42,7 +42,7 @@ traces = compare.diff(model,clonedModel);
 
 console.log("Compare Cross Compiled 2 JS from KMF :-) , diff traces detected : ");
 console.log(traces);
-console.log(traces.$size);
+console.log(traces.getTraces().$size);
 
 </script>
 
