Introduction of the MicroFramework
fix severals bug in JSON loader

cleanup API
cleanup API packages names

--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/tester.html
@@ -18,7 +18,7 @@ var saver = new kevmod.org.kevoree.serializer.JSONModelSerializer();
 var loader = new kevmod.org.kevoree.loader.JSONModelLoader();
 var factory = new kevmod.org.kevoree.impl.DefaultKevoreeFactory();
 var model = factory.createContainerRoot();
-var actionTypes = kevmod.org.kevoree.util.ActionType;
+var actionTypes = kevmod.org.kevoree.modeling.api.util.ActionType;
 /* Declare events listener */
 var listener = { elementChanged : function(event){
     switch(event.getType()){
