--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
@@ -15,8 +15,8 @@
 var kevmod = Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'];
 var saver = new kevmod.org.kevoree.serializer.JSONModelSerializer();
 var loader = new kevmod.org.kevoree.loader.JSONModelLoader();
-var cloner = new kevmod.org.kevoree.cloner.ModelCloner();
-var compare = new kevmod.org.kevoree.compare.ModelCompare();
+var cloner = new kevmod.org.kevoree.cloner.DefaultModelCloner();
+var compare = new kevmod.org.kevoree.compare.DefaultModelCompare();
 var factory = new kevmod.org.kevoree.impl.DefaultKevoreeFactory();
 
 var model = factory.createContainerRoot();
@@ -43,6 +43,7 @@ traces = compare.diff(model,clonedModel);
 console.log("Compare Cross Compiled 2 JS from KMF :-) , diff traces detected : ");
 console.log(traces);
 console.log(traces.getTraces().$size);
+
 
 </script>
 
