fix JS Flat generation of Auto generated ID

--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester2.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester2.html
@@ -9,7 +9,7 @@
 <script src="target/js/kotlin-lib-ecma3.js"></script>
 <script src="target/js/kotlin-lib.js"></script>
 <script src="target/js/kotlin-maps.js"></script>
-<script type="text/javascript" src="target/js/org.kevoree.modeling.sample.kevoree.js.js"></script>
+<script type="text/javascript" src="target/js/org.kevoree.modeling.sample.kevoree.js.merged.js"></script>
 
 <script  type="text/javascript">
 var kevmod = Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'];
