--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
@@ -6,13 +6,13 @@
 <body>
 <h1>Kotlin Kevoree JS Event tester</h1>
 
-<script src="target/js/kotlin-lib-ecma3.js"></script>
-<script src="target/js/kotlin-lib.js"></script>
-<script src="target/js/kotlin-maps.js"></script>
-<script type="text/javascript" src="target/js/org.kevoree.modeling.sample.kevoree.js.js"></script>
+<script type="text/javascript" src="target/js/org.kevoree.modeling.sample.kevoree.js.merged.js"></script>
 
 <script  type="text/javascript">
 var kevmod = Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'];
+
+console.log(Kotlin);
+
 var saver = new kevmod.org.kevoree.serializer.JSONModelSerializer();
 var loader = new kevmod.org.kevoree.loader.JSONModelLoader();
 var cloner = new kevmod.org.kevoree.cloner.DefaultModelCloner();
