improve methodEquals by using visitor API

--- a/metamodel/cloud/nodejs/index.html
+++ b/metamodel/cloud/nodejs/index.html
@@ -30,11 +30,12 @@ for(var nodeI=0;nodeI<5;nodeI++){
 var savedModel = saver.serialize(cloud);
 var cloudLoaded = loader.loadModelFromString(savedModel).get(0);
 
-var childVisitor = new model.org.kevoree.modeling.api.util.ModelVisitor(){}
-childVisitor.visit = function(modelElem){
-	console.log(modelElem.metaClassName());
-}
-cloud.visit(childVisitor,true,true,false)
+var emptyModel = factory.createCloud();
+
+console.log("assert false = "+emptyModel.deepModelEquals(cloud));
+console.log("assert true = "+emptyModel.deepModelEquals(emptyModel));
+console.log("assert false = "+cloud.deepModelEquals(emptyModel));
+console.log("assert true = "+cloud.deepModelEquals(cloud));
 
 </script>
 </html>
