--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
@@ -24,8 +24,7 @@ var node = factory.createContainerNode();
 node.setName("hello");
 model.addNodes(node);
 
-var oo = new kevmod.java.io.OutputStream();
-saver.serialize(model,oo);
+saver.serialize(model);
 
 console.log(model.findNodesByID("hello").getName());
 
@@ -42,7 +41,7 @@ traces = compare.diff(model,clonedModel);
 
 console.log("Compare Cross Compiled 2 JS from KMF :-) , diff traces detected : ");
 console.log(traces);
-console.log(traces.getTraces().$size);
+console.log(traces.get_traces().$size);
 
 
 </script>
