--- a/metamodel/cloud/nodejs/index copy.html
+++ b/metamodel/cloud/nodejs/index copy.html
@@ -1,6 +1,6 @@
 <html lang="en">
 
-<script type="text/javascript" src="org.kevoree.modeling.sample.cloud.js.min.js"></script>
+<script type="text/javascript" src="org.kevoree.modeling.sample.cloud.js.merged.js"></script>
 <script>
 var model = Kotlin.modules['org.kevoree.modeling.sample.cloud.js'];
 var saver = new model.org.cloud.serializer.JSONModelSerializer();
@@ -17,11 +17,11 @@ var ActionType = model.org.kevoree.modeling.api.util.ActionType;
 var cloud = factory.createCloud();
 for(var nodeI=0;nodeI<5;nodeI++){
     var newNode = factory.createNode();
-    newNode.id = "Node_"+nodeI;
+    newNode.setId("Node_"+nodeI);
     cloud.addNodes(newNode);
     for(var softI=0;softI<3;softI++){
        var newSoft = factory.createSoftware();
-       newSoft.name = "Soft_"+nodeI+"_"+softI;
+       newSoft.setName("Soft_"+nodeI+"_"+softI);
        newNode.addSoftwares(newSoft);
     }
 }
@@ -38,14 +38,11 @@ console.log("assert false = "+cloud.deepModelEquals(emptyModel));
 console.log("assert true = "+cloud.deepModelEquals(cloud));
 
 var clonedCloud = cloner.clone(cloud);
-console.log(clonedCloud.nodes.array.length);
+console.log(clonedCloud);
 
 console.log("assert true = "+clonedCloud.deepModelEquals(cloud));
 console.log("assert true = "+cloud.deepModelEquals(clonedCloud));
 
-Object.getPrototypeOf(cloud).hello = function(){};
-cloud.hello();
-clonedCloud.hello();
 
 </script>
 </html>
