--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
@@ -21,21 +21,21 @@ var factory = new kevmod.org.kevoree.impl.DefaultKevoreeFactory();
 
 var model = factory.createContainerRoot();
 var node = factory.createContainerNode();
-node.setName("hello");
+node.name  = "hello";
 model.addNodes(node);
 
 saver.serialize(model);
 
-console.log(model.findNodesByID("hello").getName());
+console.log(model.findNodesByID("hello").name);
 
 var clonedModel = cloner.clone(model);
-console.log(clonedModel.findNodesByID("hello").getName());
+console.log(clonedModel.findNodesByID("hello").name);
 
 var traces = compare.diff(model,clonedModel);
 console.log(traces);
 
 var node2 = factory.createContainerNode();
-node2.setName("hello2");
+node2.name = "hello2";
 clonedModel.addNodes(node2);
 traces = compare.diff(model,clonedModel);
 
