--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester.html
@@ -24,7 +24,7 @@ var node = factory.createContainerNode();
 node.name  = "hello";
 model.addNodes(node);
 
-saver.serialize(model);
+saver.serialize_0(model);
 
 console.log(model.findNodesByID("hello").name);
 
@@ -41,7 +41,7 @@ traces = compare.diff(model,clonedModel);
 
 console.log("Compare Cross Compiled 2 JS from KMF :-) , diff traces detected : ");
 console.log(traces);
-console.log(traces.get_traces().$size);
+console.log(traces.traces.$size);
 
 
 </script>
