--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester2.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.js/tester2.html
@@ -6,10 +6,10 @@
 <body>
 <h1>Kotlin Kevoree JS Event tester</h1>
 
-<script src="target/js/kotlin-lib-ecma3.js"></script>
+<script src="target/js/kotlin-lib-ecma5.js"></script>
 <script src="target/js/kotlin-lib.js"></script>
 <script src="target/js/kotlin-maps.js"></script>
-<script type="text/javascript" src="target/js/org.kevoree.modeling.sample.kevoree.js.merged.js"></script>
+<script type="text/javascript" src="target/js/org.kevoree.modeling.sample.kevoree.js.js"></script>
 
 <script  type="text/javascript">
 var kevmod = Kotlin.modules['org.kevoree.modeling.sample.kevoree.js'];
@@ -24,8 +24,7 @@ var node = factory.createContainerNode();
 node.name = "hello";
 model.addNodes(node);
 
-saver.serialize(model);
-
+saver.serialize_0(model);
 
 console.log(model.findNodesByID("hello").name);
 
