--- a/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/tester.html
+++ b/metamodel/kevoree/org.kevoree.modeling.sample.kevoree.event.js/tester.html
@@ -23,13 +23,13 @@ var actionTypes = kevmod.org.kevoree.modeling.api.util.ActionType;
 
 var listener = { elementChanged : function(event){
     switch(event.getType()){
-        case actionTypes.ADD:
+        case actionTypes.object.ADD:
               console.log("Add event ! "+event);
               break;
-        case actionTypes.SET:
+        case actionTypes.object.SET:
             console.log("Set event ! "+event);
             break;
-        case actionTypes.RENEW_INDEX:
+        case actionTypes.object.RENEW_INDEX:
             console.log("RenewIndex event ! "+event);
             break;
     }
