fix redis client, extend test

--- a/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
+++ b/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
@@ -11,8 +11,15 @@
 var universe = new org.kevoree.modeling.microframework.test.cloud.CloudUniverse();
 
 
-    var helloTest = new org.kevoree.modeling.microframework.test.HelloTest();
-    helloTest.helloTest();
+var helloTest = new org.kevoree.modeling.microframework.test.HelloTest();
+helloTest.helloTest();
+
+var rbTreeTest = new org.kevoree.modeling.microframework.test.RBTreeTest();
+rbTreeTest.firstTest();
+rbTreeTest.previousTest();
+
+var lookupTest = new org.kevoree.modeling.microframework.test.LookupTest();
+lookupTest.lookupTest();
 
 </script>
 
