--- a/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
+++ b/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
@@ -21,6 +21,11 @@ rbTreeTest.previousTest();
 var lookupTest = new org.kevoree.modeling.microframework.test.LookupTest();
 lookupTest.lookupTest();
 
+var polyTest = new org.kevoree.modeling.microframework.test.polynomial.PolynomialKMFTest();
+polyTest.test();
+
+console.log("Exec");
+
 </script>
 
 </body>
