--- a/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
+++ b/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
@@ -6,35 +6,45 @@
 </head>
 <body>
 
-<script src="../../../target/js-test/out.js"></script>
+<script src="../../../target/js-test/org.kevoree.modeling.microframework.typescript.js"></script>
 <script>
 
     var dataBase = new org.kevoree.modeling.api.data.MemoryKDataBase();
     var universe = new org.kevoree.modeling.microframework.test.cloud.CloudUniverse(dataBase);
-
-    universe.newDimension({
-        on: function (dimension0) {
-            var t0 = dimension0.time(0);
-            var node = t0.createNode();
-            node.setName("n0");
-            t0.setRoot(node);
-            var element = t0.createElement();
-            element.setName("e0");
-            node.setElement(element);
-            element.setValue(0);
-            for (var i = 1; i <= 1; i++) {
-                try {
-                    dimension0.time(i).lookup(element.uuid(), {
-                        on: function (kObject) {
-                            console.log(kObject);
-                        }
-                    });
-                } catch (e) {
-                    console.trace(e);
+    universe.newDimension(function (dimension0) {
+        var val = new Array();
+        var coef = [2, 2, 3];
+        var t0 = dimension0.time(0);
+        var node = t0.createNode();
+        node.setName("n0");
+        t0.setRoot(node);
+        var element = t0.createElement();
+        element.setName("e0");
+        node.setElement(element);
+        element.setValue(0.0);
+        try {
+            for (var i = 0; i < 1000; i++) {
+                var temp = 1;
+                for (var j = 0; j < coef.length; j++) {
+                    val[i] = val[i] + coef[j] * temp;
+                    temp = temp * i;
                 }
+                var vv = val[i];
+                var finalI = i;
+                dimension0.time(finalI).lookup(element.uuid(), function (kObject) {
+                    var casted = kObject;
+                    casted.setValue(vv);
+                });
             }
-            System.out.println("TreeSize=" + element.timeTree().size());
+        } catch (e){
+            console.trace(e);
         }
+        System.out.println(">"+element.timeTree().size());
+        element.timeTree().walk(function (timePoint) {
+            element.jump(timePoint, function (element) {
+                console.log(element.getValue());
+            });
+        });
     });
 
 </script>
