--- a/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
+++ b/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
@@ -9,43 +9,26 @@
 <script src="../../../target/js-test/org.kevoree.modeling.microframework.typescript.js"></script>
 <script>
 
-    var dataBase = new org.kevoree.modeling.api.data.MemoryKDataBase();
-    var universe = new org.kevoree.modeling.microframework.test.cloud.CloudUniverse(dataBase);
-    universe.newDimension(function (dimension0) {
-        var val = new Array();
-        var coef = [2, 2, 3];
-        var t0 = dimension0.time(0);
-        var node = t0.createNode();
-        node.setName("n0");
-        t0.setRoot(node);
-        var element = t0.createElement();
-        element.setName("e0");
-        node.setElement(element);
-        element.setValue(0.0);
-        try {
-            for (var i = 0; i < 1000; i++) {
-                var temp = 1;
-                for (var j = 0; j < coef.length; j++) {
-                    val[i] = val[i] + coef[j] * temp;
-                    temp = temp * i;
-                }
-                var vv = val[i];
-                var finalI = i;
-                dimension0.time(finalI).lookup(element.uuid(), function (kObject) {
-                    var casted = kObject;
-                    casted.setValue(vv);
-                });
-            }
-        } catch (e){
-            console.trace(e);
-        }
-        System.out.println(">"+element.timeTree().size());
-        element.timeTree().walk(function (timePoint) {
-            element.jump(timePoint, function (element) {
-                console.log(element.getValue());
-            });
-        });
-    });
+    var tests = new org.kevoree.modeling.microframework.test.RBTreeTest();
+    tests.printTest();
+
+
+    var l = new java.util.LinkedList();
+
+    console.log(l.isEmpty());
+
+    l.add("a");
+    l.add("b");
+    l.add("c");
+    l.add("d");
+    l.add("e");
+
+
+
+    console.log(l);
+    console.log("YOOOOOOOOOOOO");
+    console.log(l.poll());
+    console.log(l);
 
 </script>
 
