--- a/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
+++ b/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
@@ -5,17 +5,43 @@
     <title></title>
 </head>
 <body>
+<script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="./java.js"></script>
 <script src="./org.kevoree.modeling.microframework.typescript.js"></script>
 <script src="./org.kevoree.modeling.test.datastore.js"></script>
 <script src="./org.kevoree.modeling.database.websocket.WebSocketKBroker.js"></script>
 <script>
 
-    var geometryUniverse = new geometry.GeometryUniverse(new org.kevoree.modeling.api.data.MemoryKDataBase());
-    geometryUniverse.storage().setEventBroker(new org.kevoree.modeling.database.websocket.WebSocketKBroker(geometryUniverse.storage().getEventBroker(), "ws://localhost:23665"));
-    geometryUniverse.listen(function(evt) {
-        console.log("Event:",evt);
+    var dataBaseConnection = new org.kevoree.modeling.database.websocket.WebSocketDataBase("ws://localhost:23664");
+    dataBaseConnection.setAfterConnection(function(){
+        var geometryUniverse = new geometry.GeometryUniverse(dataBaseConnection);
+        geometryUniverse.storage().setEventBroker(new org.kevoree.modeling.database.websocket.WebSocketKBroker(geometryUniverse.storage().getEventBroker(), "ws://localhost:23665"));
+
+        console.log("Looking for the dimension");
+        geometryUniverse.dimension(0, function(dimension){
+            var view = dimension.time(0);
+            view.select("/", function(results){
+                if(results === undefined || results.length == 0) {
+                    console.error("No root found.", results)
+                } else {
+                    var lib = results[0];
+                    console.log("Before For each");
+                    lib.eachShapes(function(shape){
+                        $('<div id="'+shape.getName()+'" style="height:50px;width:50px;display: inline-block; margin: 10px;background-color: '+shape.getColor()+';"></div>').appendTo($('body'));
+                        shape.jump(shape.timeTree().first(), function(firstShape){
+                            firstShape.listen(function(event){
+                                if(event.getMetaElement() == shape.metaAttribute("color").metaName()) {
+                                    $('div#' + shape.getName()).css('background-color',event.newValue())
+                                }
+                            });
+                        });
+                    }, function(error){if(error){console.error(error);}});
+                    console.log("Yeah go ahead !")
+                }
+            });
+        });
     });
+    dataBaseConnection.connect();
 
 </script>
 </body>
