--- a/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
+++ b/test/org.kevoree.modeling.test.datastore/src/main/resources/index.html
@@ -5,9 +5,7 @@
     <title></title>
 
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-    <script src="./java.js"></script>
-    <script src="./org.kevoree.modeling.microframework.typescript.js"></script>
-    <script src="./org.kevoree.modeling.test.datastore.js"></script>
+    <script src="./org.kevoree.modeling.test.datastore-all.js"></script>
     <script src="./org.kevoree.modeling.database.websocket.WebSocketKBroker.js"></script>
 </head>
 <body>
