--- a/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
+++ b/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
@@ -5,6 +5,8 @@
     <title></title>
 </head>
 <body>
+<script src="../../../target/classes/java.js"></script>
+<script src="../../../target/classes/org.kevoree.modeling.microframework.typescript.js"></script>
 <script src="../../../target/js-test/org.kevoree.modeling.microframework.typescript.js"></script>
 <script>
     try {
