--- a/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
+++ b/org.kevoree.modeling.microframework.typescript/src/test/js/test.html
@@ -12,7 +12,7 @@
 <script>
     try {
 
-        var timeTestSuite = new FlatJUnitTest();
+        var timeTestSuite = new gentest.FlatJUnitTest();
         timeTestSuite.run();
 
     } catch (e) {
